--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "axios": "^1.1.2",
+    "element-plus": "^2.2.18",
+    "qs": "^6.11.0",
+    "sass": "^1.55.0",
+    "vform3-builds": "^3.0.8",
+    "vue": "^3.2.37",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
